<resources>

    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="action_sign_in_short">Register</string>
    <string name="hint_new_email">New Email</string>
    <string name="remove_user">Remove user</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="btn_remove">Remove</string>
    <string name="hint_email">Email</string>
    <string name="new_pass">New Password</string>
    <string name="change_password">Change Password</string>
    <string name="change_email">Change Email</string>
    <string name="send_password_reset_email">Send password reset email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_login">Login</string>
    <string name="forgot_password_msg">We just need your registered email to send you password reset instructions.</string>
    <string name="btn_reset_password">Reset Password</string>


    <string name="app_name">EatNow</string>
    <string name="title_activity_add_recipe">Add New Recipe</string>
    <string name="recipename">Recipe Title</string>
    <string name="servingsize">Serving Size</string>
    <string name="preptime">Time</string>
    <string name="cooktime">Cooking Time</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>

    <string name="category1">Entree</string>
    <string name="category2">Main Course</string>
    <string name="category3">Dessert</string>
    <string name="category4">Drinks</string>
    <string name="category5">Anything Else!</string>
    <string name="cd_recipe_list">Recipe list</string>

    <string name="titleheader">Recipe Title</string>
    <string name="categoryheader">Recipe Category</string>
    <string name="servingheader">Serving Size</string>
    <string name="preptimeheader">Prep Time</string>
    <string name="cooktimeheader">Cooking Time</string>
    <string name="ingredientheader">Ingredients</string>
    <string name="instructionheader">Instructions</string>
    <string name="title_activity_login">LoginActivity</string>


</resources>
