<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="16dp"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="16dp"
    tools:context=".RegistrationActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:visibility="gone" />

    <EditText
        android:id="@+id/password"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="32dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginBottom="53dp"
        android:focusableInTouchMode="true"
        android:hint="prompt_password"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true" />

    <EditText
        android:id="@+id/new_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignBaseline="@+id/password"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="32dp"
        android:hint="@string/hint_new_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:singleLine="true" />

    <Button
        android:id="@+id/remove_user_button"
        android:layout_width="300dp"

        android:layout_height="36dp"
        android:layout_above="@+id/sign_out"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginBottom="14dp"
        android:background="@drawable/rounded_corner_grey"
        android:text="@string/remove_user"
        android:textColor="@color/text"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/sign_out"
        style="?android:textAppearanceSmall"
        android:layout_width="176dp"
        android:layout_height="32dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="41dp"
        android:background="@drawable/rounded_corners"
        android:text="@string/btn_sign_out"
        android:textColor="@color/text"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/remove"
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_above="@+id/change_password_button"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="256dp"
        android:layout_marginRight="256dp"
        android:layout_marginBottom="49dp"
        android:background="@drawable/rounded_corner_grey"
        android:text="@string/btn_remove"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/old_email"
        android:layout_width="355dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignBaseline="@+id/password"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="32dp"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:singleLine="true" />

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="355dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/password"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="24dp"
        android:focusableInTouchMode="true"
        android:hint="@string/new_pass"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true" />

    <Button
        android:id="@+id/change_password_button"
        android:layout_width="300dp"

        android:layout_height="36dp"
        android:layout_above="@+id/sending_pass_reset_button"
        android:layout_alignParentStart="true"

        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginBottom="59dp"
        android:background="@drawable/rounded_corner_grey"
        android:text="@string/change_password"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/change_email_button"
        style="?android:textAppearanceSmall"
        android:layout_width="300dp"

        android:layout_height="36dp"
        android:layout_alignBottom="@+id/sending_pass_reset_button"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginBottom="47dp"
        android:background="@drawable/rounded_corner_grey"
        android:text="@string/change_email"
        android:textColor="@color/text"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/sending_pass_reset_button"
        style="?android:textAppearanceSmall"
        android:layout_width="300dp"
        android:layout_height="36dp"

        android:layout_alignBottom="@+id/remove_user_button"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginBottom="46dp"
        android:background="@drawable/rounded_corner_grey"
        android:text="@string/send_password_reset_email"
        android:textColor="@color/text"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/changeEmail"
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_above="@+id/change_password_button"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="21dp"
        android:layout_marginLeft="21dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/rounded_corner_grey"
        android:text="@string/btn_change"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/changePass"
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_above="@+id/change_password_button"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginBottom="47dp"
        android:background="@drawable/rounded_corner_grey"
        android:text="@string/btn_change"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/send"
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_above="@+id/change_password_button"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginBottom="46dp"
        android:background="@drawable/rounded_corner_grey"
        android:text="@string/btn_send"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />


</RelativeLayout>