<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.AddRecipeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/addNewHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:text="Add New Recipe"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/recipeName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="Recipe Title"
            android:textAppearance="@style/TextAppearance.AppCompat.Title.Inverse"
            android:textColor="?attr/actionMenuTextColor"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/editRecipeTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="30"
            android:hint="@string/recipename"
            android:inputType="textShortMessage"
            android:paddingLeft="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@android:color/darker_gray"
            android:theme="?android:attr/editTextStyle" />

        <TextView
            android:id="@+id/category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="Category"
            android:textAppearance="@style/TextAppearance.AppCompat.Title.Inverse"
            android:textColor="?attr/actionMenuTextColor"
            android:textSize="14sp" />

        <Spinner
            android:id="@+id/recipeCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/recipecategory"
            tools:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/serving"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="Serving Size"
            android:textAppearance="@style/TextAppearance.AppCompat.Title.Inverse"
            android:textColor="?attr/actionMenuTextColor"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/editServing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="30"
            android:hint="@string/servingsize"
            android:inputType="textShortMessage"
            android:paddingLeft="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@android:color/darker_gray"
            android:theme="?android:attr/editTextStyle" />

        <TextView
            android:id="@+id/preptime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="Enter Prep Time"
            android:textAppearance="@style/TextAppearance.AppCompat.Title.Inverse"
            android:textColor="?attr/actionMenuTextColor"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/editPrepTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="30"
            android:hint="@string/preptime"
            android:inputType="textShortMessage"
            android:paddingLeft="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@android:color/darker_gray"
            android:theme="?android:attr/editTextStyle" />

        <TextView
            android:id="@+id/cookingTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="Cooking Time"
            android:textAppearance="@style/TextAppearance.AppCompat.Title.Inverse"
            android:textColor="?attr/actionMenuTextColor"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/editCookingTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="30"
            android:hint="@string/cooktime"
            android:inputType="textShortMessage"
            android:paddingLeft="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@android:color/darker_gray"
            android:theme="?android:attr/editTextStyle" />

        <TextView
            android:id="@+id/ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="Ingredients"
            android:textAppearance="@style/TextAppearance.AppCompat.Title.Inverse"
            android:textColor="?attr/actionMenuTextColor"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/editIngredients"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:gravity="top"
            android:hint="@string/ingredients"
            android:inputType="textMultiLine"
            android:padding="8dp"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="Instructions"
            android:textAppearance="@style/TextAppearance.AppCompat.Title.Inverse"
            android:textColor="?attr/actionMenuTextColor"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/editInstructions"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/instructions"
            android:inputType="textMultiLine"
            android:padding="8dp"
            android:textSize="14sp" />
        <TextView
            android:id="@+id/addImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="Add Image"
            android:textAppearance="@style/TextAppearance.AppCompat.Title.Inverse"
            android:textColor="?attr/actionMenuTextColor"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/editImage"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            app:srcCompat="@android:drawable/ic_menu_camera"
            android:scaleType="centerInside"
            android:clickable="true"
            android:onClick="selectImage"
            />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Save Recipe"
            android:background="@color/colorAccent"
            android:textColor="@android:color/background_light"
            />


    </LinearLayout>

</android.support.v4.widget.NestedScrollView>